retitled section of gpt2 notebook

--- a/gpt-2/gpt2-generate-finetune.ipynb
+++ b/gpt-2/gpt2-generate-finetune.ipynb
@@ -38,13 +38,6 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%pip install -q gpt-2-simple"
    ]
@@ -58,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "id": "KBkpRgBCBS2_"
    },
@@ -129,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -261,15 +254,7 @@
     "id": "aeXshJM-Cuaf",
     "outputId": "a3c75caa-917b-4818-ca2d-d78610d8b6f2"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-08 00:28:19.482000: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30979 MB memory:  -> device: 0, name: Tesla V100-PCIE-32GB, pci bus id: 0000:d8:00.0, compute capability: 7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#model_name = \"355M\" # same model as selected above\n",
     "\n",
@@ -300,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "id": "6OFnPCLADfll"
    },
@@ -335,225 +320,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "For larger models, the recommended finetune() parameters are:\n",
-      "\tuse_memory_saving_gradients = True\n",
-      "\tonly_train_transformer_layers = True\n",
-      "\taccumulate_gradients = 1\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-08 00:28:26.493163: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30979 MB memory:  -> device: 0, name: Tesla V100-PCIE-32GB, pci bus id: 0000:d8:00.0, compute capability: 7.0\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint models/355M/model.ckpt\n",
-      "INFO:tensorflow:Restoring parameters from models/355M/model.ckpt\n",
-      "Loading dataset...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 1/1 [00:00<00:00,  6.25it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dataset has 21258 tokens\n",
-      "Training...\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[10 | 26.12] loss=3.21 avg=3.21\n",
-      "[20 | 45.94] loss=3.41 avg=3.31\n",
-      "[30 | 65.78] loss=3.26 avg=3.29\n",
-      "[40 | 85.60] loss=3.11 avg=3.25\n",
-      "[50 | 105.42] loss=2.93 avg=3.18\n",
-      "[60 | 125.22] loss=2.86 avg=3.13\n",
-      "[70 | 145.06] loss=3.04 avg=3.11\n",
-      "[80 | 164.86] loss=2.57 avg=3.04\n",
-      "[90 | 184.66] loss=2.46 avg=2.98\n",
-      "[100 | 204.46] loss=2.31 avg=2.91\n",
-      "======== SAMPLE 1 ========\n",
-      "oreal.\n",
-      "\n",
-      "The last thing you want to do is be an embarrassment.\n",
-      "\n",
-      "So don't be a dick.\n",
-      "\n",
-      "Also, this piece has some interesting analogies. A lot of my work does.\n",
-      "\n",
-      "So do I.\n",
-      "\n",
-      "What's more significant, reading some of these books or reading some of my own?\n",
-      "\n",
-      "\n",
-      "It was only after I had finished that I got around to trying to figure it out\n",
-      "\n",
-      "For the last time, I believe in God\n",
-      "\n",
-      "I don't believe in anything\n",
-      "\n",
-      "So let's say I love you and I do, and I think about you often,\n",
-      "\n",
-      "But like all good parents I can't help but think, I'm not as good at it as I thought I was--\n",
-      "\n",
-      "I'm not that good a dad\n",
-      "\n",
-      "So my advice is: get a real job.\n",
-      "\n",
-      "So, I think one of the things about this book that is particularly important is that it comes straight out of the heart. And that is to say not, \"Why am I doing this kind of thing?\" but rather, I've got the heart and I don't have the brain. That is to say that I know a little something about my heart. I've heard a lot of things about my brain, but I have only a limited amount of information about my heart.\n",
-      "\n",
-      "So my advice would be put some of these ideas in your mouth, spit them out and do it over and over again.\n",
-      "\n",
-      "This is not the way to put ideas in your mouth.\n",
-      "\n",
-      "It's like that old saying, \"put your hands in the sand and wait for the waves to come.\" It doesn't work like that, because you don't have to act like you're about to put your hands in the sand.\n",
-      "\n",
-      "So don't.\n",
-      "\n",
-      "You can put them in.\n",
-      "\n",
-      "It works pretty well.\n",
-      "\n",
-      "Okay, so we've got the heart, the gut and a little bit of the head.\n",
-      "\n",
-      "Which is something to be proud of.\n",
-      "\n",
-      "Or embarrassed about or something.\n",
-      "\n",
-      "Sometimes it is.\n",
-      "\n",
-      "You don't have to look like an intellectual.\n",
-      "\n",
-      "I don't know how to put these any better than that.\n",
-      "\n",
-      "Like, I'm not embarrassed about my inability to put these together.\n",
-      "\n",
-      "I am actually surprised you think it's a secret I'm not embarrassed about my inability to put these together.\n",
-      "\n",
-      "But you are. [chuckles]\n",
-      "\n",
-      "So, my advice to you is to put these things together. And you don't have to know how to put a rock together to put it together.\n",
-      "\n",
-      "It starts with your brain.\n",
-      "\n",
-      "I don't see where your brain ends and it begins, and it doesn't begin.\n",
-      "\n",
-      "Because it's not developing. Your brain is developing but you're not developing it. So, do something with your life.\n",
-      "\n",
-      "Not with my life.\n",
-      "\n",
-      "And start putting these things together.\n",
-      "\n",
-      "Okay, so I saw you coming.\n",
-      "\n",
-      "I was trying to be subtle.\n",
-      "\n",
-      "But it wasn't too subtle.\n",
-      "\n",
-      "\n",
-      "So tell me, but what were you thinking as you were drawing this?\n",
-      "\n",
-      "Well, here is my problem. I am unable to draw a stable, coherent line across space and time.\n",
-      "\n",
-      "Exactly.\n",
-      "\n",
-      "I have no idea what I am doing.\n",
-      "\n",
-      "Well, don't say nothing.\n",
-      "\n",
-      "[pause]\n",
-      "\n",
-      "[pause]\n",
-      "\n",
-      "[blurt out] I don't know what I am doing. [sighs dramatically]\n",
-      "\n",
-      "How am I supposed to know when I have done something or not done something when I feel nothing like myself?\n",
-      "\n",
-      "So, I need to develop some sort of persona or self image. Or I need to do something about my lack of self image.\n",
-      "\n",
-      "[pause]\n",
-      "\n",
-      "[sighs]\n",
-      "\n",
-      "But I don't know what to do.\n",
-      "\n",
-      "My brain is so dysfunctional.\n",
-      "\n",
-      "[chuckle]\n",
-      "\n",
-      "So I can't develop a coherent personality.\n",
-      "\n",
-      "What do you mean that?\n",
-      "\n",
-      "I don't think there is such a thing as a coherent personality. [chuckle] I'm just not myself.\n",
-      "\n",
-      "Maybe you are but your brain isn't functioning as well as it could. You don't have any strong personalities inside of you. You are like a computer running off bare metal. And your mind just can't get any work done.\n",
-      "\n",
-      "Okay. So I need to develop some sort of persona or self image or something.\n",
-      "\n",
-      "So your character or personality could take the form of: a dog\n",
-      "\n",
-      "a bird\n",
-      "\n",
-      "a fish\n",
-      "\n",
-      "a human child.\n",
-      "\n",
-      "\n",
-      "A human child. You are not a human.\n",
-      "\n",
-      "[Chuckle]\n",
-      "\n",
-      "Well, at least I am not a dog. I am still a dog.\n",
-      "\n",
-      "I can take it any way I want to take it.\n",
-      "\n",
-      "\n",
-      "So it is possible\n",
-      "\n",
-      "[110 | 237.31] loss=2.25 avg=2.84\n",
-      "[120 | 257.13] loss=2.15 avg=2.78\n",
-      "[130 | 276.93] loss=1.89 avg=2.71\n",
-      "[140 | 296.73] loss=1.60 avg=2.63\n",
-      "[150 | 316.54] loss=1.46 avg=2.54\n",
-      "[160 | 336.34] loss=1.56 avg=2.48\n",
-      "[170 | 356.15] loss=0.96 avg=2.38\n",
-      "[180 | 375.95] loss=0.79 avg=2.28\n",
-      "[190 | 395.75] loss=0.63 avg=2.19\n",
-      "[200 | 415.54] loss=0.73 avg=2.11\n",
-      "Saving checkpoint/run1/model-200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpt2.finetune(sess,\n",
     "              dataset=file_name,\n",
@@ -601,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -609,27 +378,19 @@
     "id": "aeXshJM-Cuaf",
     "outputId": "a3c75caa-917b-4818-ca2d-d78610d8b6f2"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-02-08 00:42:06.395875: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1510] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 30979 MB memory:  -> device: 0, name: Tesla V100-PCIE-32GB, pci bus id: 0000:d8:00.0, compute capability: 7.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#model_name = \"355M\" # same model as selected above\n",
     "\n",
     "tf.compat.v1.reset_default_graph()\n",
     "\n",
-    "if not sess:\n",
+    "# check if sess exists (e.g. if we ran section 1 above)\n",
+    "var_exists = 'sess' in locals() or 'sess' in globals()\n",
+    "\n",
+    "if not var_exists:\n",
     "    sess = gpt2.start_tf_sess()\n",
     "else:\n",
-    "    sess = gpt2.reset_session(sess)\n",
-    "    \n",
-    "# gpt2.load_gpt2(sess, run_name=run_name)\n",
-    "# gpt2.load_gpt2(sess, model_name=model_name)"
+    "    sess = gpt2.reset_session(sess)"
    ]
   },
   {
@@ -641,26 +402,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OSError",
-     "evalue": "[Errno 122] Disk quota exceeded",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 5] Input/output error",
-      "\nDuring handling of the above exception, another exception occurred:\n",
-      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_2990076/3782541432.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m gpt2.finetune(sess,\n\u001b[0m\u001b[1;32m      2\u001b[0m               \u001b[0mdataset\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m               \u001b[0mmodel_name\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mmodel_name\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m               \u001b[0msteps\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m400\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m               \u001b[0mrestore_from\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'latest'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;31m# change to 'latest' to resume\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.9/site-packages/gpt_2_simple/gpt_2.py\u001b[0m in \u001b[0;36mfinetune\u001b[0;34m(sess, dataset, steps, model_name, model_dir, combine, batch_size, learning_rate, accumulate_gradients, restore_from, run_name, checkpoint_dir, sample_every, sample_length, sample_num, multi_gpu, save_every, print_every, max_checkpoints, use_memory_saving_gradients, only_train_transformer_layers, optimizer, overwrite, reuse)\u001b[0m\n\u001b[1;32m    169\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mfile\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'hparams.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'encoder.json'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'vocab.bpe'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    170\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 171\u001b[0;31m             shutil.copyfile(os.path.join(model_dir, model_name, file),\n\u001b[0m\u001b[1;32m    172\u001b[0m                             os.path.join(checkpoint_path, file))\n\u001b[1;32m    173\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mFileNotFoundError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mfnf_error\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/util/opt/anaconda/deployed-conda-envs/packages/tensorflow-gpu/envs/tensorflow-gpu-2.6.0-py39/lib/python3.9/shutil.py\u001b[0m in \u001b[0;36mcopyfile\u001b[0;34m(src, dst, follow_symlinks)\u001b[0m\n\u001b[1;32m    284\u001b[0m                     \u001b[0;32mreturn\u001b[0m \u001b[0mdst\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    285\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 286\u001b[0;31m                 \u001b[0mcopyfileobj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsrc\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfdst\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    287\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    288\u001b[0m         \u001b[0;31m# Issue 43219, raise a less confusing exception\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mOSError\u001b[0m: [Errno 122] Disk quota exceeded"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "gpt2.finetune(sess,\n",
     "              dataset=file_name,\n",
@@ -681,7 +425,7 @@
     "id": "ClJwpF_ACONp"
    },
    "source": [
-    "# 3. Generate Text From The Trained Model\n",
+    "# 3. Generate Text From The Finetuned Model\n",
     "\n",
     "After you've trained the model or loaded a retrained model from checkpoint, you can now generate text. `generate` generates a single text from the loaded model."
    ]
