added yourtts voice

--- a/lenet/lenet_mnist_keras.ipynb
+++ b/lenet/lenet_mnist_keras.ipynb
@@ -19,7 +19,7 @@
    "source": [
     "__NOTE for OOD users__: select the `TensorFlow GPU 2.7 (py39)` kernel. \n",
     "\n",
-    "Explores Convolutional Neural Networks. \n",
+    "Walks through training and using a Convolutional Neural Networks. In this case, [LeCunn et al., Gradient-Based Learning Applied to Document Recognition (1998)](http://yann.lecun.com/exdb/publis/pdf/lecun-01a.pdf) implemented with Keras.\n",
     "\n",
     "To build our model we need to do a few steps:\n",
     "- Download the MNIST dataset with consist of labeled handwritten images (28x28 px).\n",
@@ -616,13 +616,6 @@
     "print(probs)\n",
     "print(probs.argmax(axis=1))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
