added yourtts example

--- a/deepdream/deepdream.ipynb
+++ b/deepdream/deepdream.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EMAR349 ML for the Arts - Twomey - Spring 2022 - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "xu2SVpFJjmJr"
@@ -17,7 +24,7 @@
     "id": "hupz2hrZjdnC"
    },
    "source": [
-    "__NOTE: for EMAR349 OOD users Spring 2022__: select `tf-gpu-1.14` for your kernel at top right, then run the cells.\n",
+    "__NOTE for OOD users__: select the `tf-gpu-1.14` kernel.\n",
     "\n",
     "Contents:\n",
     "- [Loading and displaying the model graph](#loading)\n",
