--- a/lenet/lenet_mnist_keras.ipynb
+++ b/lenet/lenet_mnist_keras.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "EMAR349 ML for the Arts - Twomey - Spring 2022 - [ml.roberttwomey.com](http://ml.roberttwomey.com)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "id": "sO5O1oU5lPzy"
@@ -403,7 +410,7 @@
     "id": "zLdfGt_GlP0x"
    },
    "source": [
-    "## 3. LeNet-5 implmentation\n",
+    "## 3. LeNet-5 implementation\n",
     "\n",
     "![lenet.png](https://raw.githubusercontent.com/MostafaGazar/mobile-ml/master/files/lenet.png)\n",
     "> LeNet-5 Architecture. Credit: [LeCun et al., 1998](http://yann.lecun.com/exdb/publis/psgz/lecun-98.ps.gz)\n",
