--- a/vgg_walkthrough/vgg19_layers.ipynb
+++ b/vgg_walkthrough/vgg19_layers.ipynb
@@ -22,9 +22,9 @@
    "metadata": {},
    "source": [
     "# Keras VGG19 Example for Image Classification\n",
-    "__Notes__for OOD users Spring 2022__: \n",
-    "- select `tf-gpu-1.14` for your kernel at top right, then run the cells.\n",
-    "- the warnings below are just warnings."
+    "__NOTE for OOD users__: select the `tf-gpu-1.14` for your kernel.\n",
+    "\n",
+    "The warnings below are just warnings due to using an old version of tensorflow."
    ]
   },
   {
