added dcgan example

--- a/dcgan_pytorch/dcgan_train.ipynb
+++ b/dcgan_pytorch/dcgan_train.ipynb
@@ -735,7 +735,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "niter = 35\n",
+    "niter = 5\n",
     "epoch=1\n",
     "i=1\n",
     "print('[%d/%d][%d/%d] Loss_D: %.4f Loss_G: %.4f D(x): %.4f D(G(z)): %.4f / %.4f'\n",
@@ -891,17 +891,12 @@
    "metadata": {},
    "source": [
     "# Activities\n",
+    "- Interpolate between two difference noise vectors\n",
+    "    - spherical or linear interpolation\n",
     "- Experiment with a different dataset. \n",
     "    - See CelebA dataset in this tutorial: https://pytorch.org/tutorials/beginner/dcgan_faces_tutorial.html\n",
     "    - LSUN dataset (bedrooms, cars, etc.): https://github.com/pytorch/examples/tree/main/dcgan#downloading-the-dataset"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
