added more ffmpeg instructions

--- a/biggan/BigGAN_handson.ipynb
+++ b/biggan/BigGAN_handson.ipynb
@@ -779,7 +779,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "__to make the movie file__: open a terminal run the ffmpeg command above. It will create an output .mp4 file in your current directory."
+    "__to make the movie file__: \n",
+    "1. open a terminal here in jupterhub. \n",
+    "2. type `module load ffmpeg` to load the ffmpeg program.\n",
+    "3. cut and past the ffmpeg command above to generate your video file. This will create an output .mp4 file in your current directory.\n",
+    "4. Download the video file from the file browser."
    ]
   },
   {
