--- a/basics/Overview_of_Colaboratory_Features.ipynb
+++ b/basics/Overview_of_Colaboratory_Features.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/roberttwomey/ml-art-code/blob/master/basics/Overview_of_Colaboratory_Features.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "JyG45Qk3qQLS"
       },
       "source": [
@@ -29,31 +39,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "cellView": "both",
         "colab": {
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "WUtu4316QSHL",
-        "outputId": "67bdf0c3-d76f-4226-fc34-a2f2d0eba60b"
+        "outputId": "a994adb2-e99e-4a18-ec00-8f278e5154f5"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "10"
+              "5"
             ]
           },
-          "execution_count": 0,
-          "metadata": {
-            "tags": []
-          },
-          "output_type": "execute_result"
+          "metadata": {},
+          "execution_count": 5
         }
       ],
       "source": [
-        "a = 10\n",
+        "a = 5\n",
         "a"
       ]
     },
@@ -109,31 +117,33 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "cellView": "both",
         "colab": {
-          "height": 244
+          "height": 250,
+          "base_uri": "https://localhost:8080/"
         },
         "id": "d-S-3nYLQSHb",
-        "outputId": "38d534fc-8b61-4f9f-d731-74b23aadb5bc"
+        "outputId": "53fc1afa-5df9-4f62-d498-93da4514a85d"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "Sleeping\n"
           ]
         },
         {
-          "ename": "KeyboardInterrupt",
-          "evalue": "ignored",
           "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "",
           "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-3-626f81edbca4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Sleeping\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m30\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# sleep for a while; interrupt me!\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      4\u001b[0m \u001b[1;32mprint\u001b[0m \u001b[1;34m\"Done Sleeping\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-7-fb6d98dc021a>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m30\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# sleep for a while; interrupt me!\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Done Sleeping\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
           ]
         }
       ],
@@ -525,13 +535,23 @@
         "\n",
         "The Comment button in the top-right corner of the page shows all comments attached to the notebook."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Reference\n",
+        "Adapted from the google colab examples:  https://colab.google/notebooks/"
+      ],
+      "metadata": {
+        "id": "3TmNG8lfj3bo"
+      }
     }
   ],
   "metadata": {
     "colab": {
       "name": "Overview of Colaboratory Features",
-      "toc_visible": true,
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "display_name": "Python 3",
